Stop inline KaTeX from wrapping

--- a/src/scss/phy/isaac.scss
+++ b/src/scss/phy/isaac.scss
@@ -156,8 +156,12 @@ p small {
     }
 }
 
-// Double class to give this more specifity
-.katex.katex { font-size: 1.1em; }
+// Double class to give this more specificity
+.katex.katex {
+    font-size: 1.1em;
+    white-space: nowrap !important;
+    overflow: auto;
+}
 
 body {
     color: $black;
